refactor migration and support creating new table 'spaces'
