# builder/git/gitserver/gitea/detail.go
@@ -19,7 +19,7 @@ func (c *Client) GetModelDetail(namespace, name string) (model *types.ModelDetai
 		Private:       giteaRepo.Private,
 		Downloads:     0,
 		LastUpdatedAt: giteaRepo.Updated.Format("006-01-02 15:04:05"),
-		HTTPCloneURL:  PortalCloneUrl(giteaRepo.CloneURL, types.ModelRepo, c.config.GitServer.URL, c.config.Frontend.URL),
+		HTTPCloneURL:  portalCloneUrl(giteaRepo.CloneURL, types.ModelRepo, c.config.GitServer.URL, c.config.Frontend.URL),
 		SSHCloneURL:   giteaRepo.SSHURL,
 		Size:          giteaRepo.Size,
 		DefaultBranch: giteaRepo.DefaultBranch,
@@ -41,7 +41,7 @@ func (c *Client) GetDatasetDetail(namespace, name string) (model *types.DatasetD
 		Private:       giteaRepo.Private,
 		Downloads:     0,
 		LastUpdatedAt: giteaRepo.Updated.Format("2006-01-02 15:04:05"),
-		HTTPCloneURL:  PortalCloneUrl(giteaRepo.CloneURL, types.DatasetRepo, c.config.GitServer.URL, c.config.Frontend.URL),
+		HTTPCloneURL:  portalCloneUrl(giteaRepo.CloneURL, types.DatasetRepo, c.config.GitServer.URL, c.config.Frontend.URL),
 		SSHCloneURL:   giteaRepo.SSHURL,
 		Size:          giteaRepo.Size,
 		DefaultBranch: giteaRepo.DefaultBranch,
